feat: add `findWorkspaceRoot`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,6 @@
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
     "skipLibCheck": true
-  }
+  },
+  "include": ["src", "test"]
 }
