--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@bytriska/ts-package-starter",
   "type": "module",
   "version": "0.0.0",
-  "packageManager": "pnpm@10.12.1",
+  "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b",
   "description": "A TypeScript package starter template with monorepo support",
   "author": "Triska Mahfud K (https://github.com/bytriska)",
   "license": "MIT",
