--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "@bytriska/ts-package-starter",
+  "name": "@bytriska/package-json",
   "type": "module",
   "version": "0.0.0",
   "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b",
-  "description": "A TypeScript package starter template with monorepo support",
+  "description": "Simple utilities to find the workspace root, read and write package.json files, and more.",
   "author": "Triska Mahfud K (https://github.com/bytriska)",
   "license": "MIT",
   "funding": "https://github.com/sponsors/bytriska",
-  "homepage": "https://github.com/bytriska/ts-package-starter#readme",
+  "homepage": "https://github.com/bytriska/package-json#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bytriska/ts-package-starter.git"
+    "url": "git+https://github.com/bytriska/package-json.git"
   },
-  "bugs": "https://github.com/bytriska/ts-package-starter/issues",
+  "bugs": "https://github.com/bytriska/package-json/issues",
   "keywords": [],
   "exports": {
     ".": {
