--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,10 +33,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # # Uncomment the following lines to publish to npm on CI
-      #
-      # - run: pnpm install --frozen-lockfile
-      # - run: pnpm publish -r --access public
-      #   env:
-      #     NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-      #     NPM_CONFIG_PROVENANCE: true
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm publish -r --access public
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          NPM_CONFIG_PROVENANCE: true
